Z-index for card and navbar issue fixed

--- a/assets/ButtonComponentMorph/css/component.css
+++ b/assets/ButtonComponentMorph/css/component.css
@@ -39,7 +39,7 @@
 }
 
 .morph-button-fixed > button {
-	z-index: 1000;
+	z-index: 99;
 	width: 100%;
 	height: 292px;
 	-webkit-transition: opacity 0.1s 0.5s;
